--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,14 @@
+/target
+/classes
+/checkouts
+pom.xml
+pom.xml.asc
+*.jar
+*.class
+/.lein-*
+/.nrepl-port
+.hgignore
+.hg/
+
+# on mac
 .DS_Store
